--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Wane's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 
@@ -22,15 +24,15 @@
         <p>
           I have also held a number of different management, individual contributer, and operations positions in high technology
           including Global Supply Chain Director, Principle Supply Manager, and Quality Engineer supporting manufacturing, automation development,
-          test development, information technology, marketing, facilities, and construction. I was laid off in 2018 and began training as an over the road truck driver,
+          test development, information technology, marketing, facilities, and construction. I was laid off in 2017 and began training as an over the road truck driver,
           working across the 48 states with over 250K safe driving miles.
         </p>
         <p>
-          In 2022, and working at Outrider, I decided to improve my education and completed a basic Linux course.  I am currently training in Linux Administration, and have entered a Web Development bootcamp to learn to code
-        and become a full stack web developer (HTML, CSS, Bootstrap, Javascript, JQuery, Github, Node, React, MongoDB, Web3,
-        Blockchain, NFT minting, buying, selling and DAapps). Future classes in 2022 will include Bash shell scripting and python programming,
-        as well as IOS App development.
-      </p>
+          In 2022, and working at Outrider, I decided to improve my education and completed a basic Linux course. I am currently training in Linux Administration, have entered a Web Development bootcamp to learn to code
+          and become a full stack web developer (HTML, CSS, Bootstrap, Javascript, JQuery, Github, Node, React, MongoDB, Web3,
+          Blockchain, NFT minting, buying, selling and DAapps). Future classes in 2022 will include Bash shell scripting and python programming,
+          as well as IOS App development.
+        </p>
       </td>
     </tr>
   </table>
@@ -44,8 +46,8 @@
     and High Technology experience to work toward a better future in the Transportation Industry.
   </p>
   <p> I am also a photographer who is inspired by nature, travel, culture, and urban living. I have an adventurous spirit and have traveled extensively in Asia, parts of Europe, and North America.
-    Working with different cultures has developed an appreciation for diverse cultures and views.  Based in Colorado, I have tended to concentrate my photography on nature, landscape, & wildlife
-    (dompierphoto.picfair.com). In 2022, I am working on developing my information technology skills toward web development, application development, and programming as well as Web3 and NFT's.
+    Working with different cultures has developed an appreciation for diverse cultures and views. Based in Colorado, I have tended to concentrate my photography on nature, landscape, & wildlife
+    <strong><a href="https://dompierphoto.picfair.com/">(dompierphoto.picfair.com)</a></strong>. In 2022, I am working on developing my information technology skills toward web development, application development, and programming as well as Web3 and NFT's.
   </p>
   <hr />
 
@@ -130,10 +132,15 @@
   <hr />
 
 
-  <a href="Hobbies.html"><h3>My Hobbies</h3></a>
+  <a href="Hobbies.html">
+    <h3>My Hobbies</h3>
+  </a>
   <hr />
-  <a href="Contactme.html"><h3>Contact Me</h3></a>
+  <a href="Contactme.html">
+    <h3>Contact Me</h3>
+  </a>
   <hr />
+
 </body>
 
 </html>
