--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -21,4 +22,5 @@
   </ol>
   <hr />
 </body>
+
 </html>
