--- a/Contactme.html
+++ b/Contactme.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h3>Contact Me</h3>
+  <h3 class="fontstyle">Contact Me</h3>
   <table cellspacing="10">
     <tr>
       <td><strong><em>LINKEDIN: </em></strong></td>
@@ -21,7 +21,7 @@
   </table>
   <hr />
   <br />
-  <h3>Please Enter Your Contact Information:</h3>
+  <h3 class="fontstyle">Please Enter Your Contact Information:</h3>
   <form action="mailto: wdompier@gmail.com" method="post" enctype="text/plain">
     <table cellspacing="10">
       <tr>
