--- a/Hobbies.html
+++ b/Hobbies.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h3>My Hobbies</h3>
+  <h3 class="fontstyle">My Hobbies</h3>
   <ol>
     <li><strong><em>Hiking</strong></em></li>
     <li><strong><em>Bicycling / Cycling</strong></em></li>
