--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="Images/Wane Dompier-modified.png" alt="Wane Dompier Profile Photo" width="300px" height="auto"></td>
+      <td><img class="circle1 circlebase" src="Images/Wane Dompier-modified.png" alt="Wane Dompier Profile Photo" width="300px" height="auto"></td>
       <td>
-        <h1>Wane Dompier</h1>
-        <h2><em><strong>Autonomous Vehicle Operator at Outrider</strong></em></h2>
+        <h1 class="fontstyle">Wane Dompier</h1>
+        <h2 class="fontstyle"><em><strong>Autonomous Vehicle Operator at Outrider</strong></em></h2>
         <p>
           I am an Autonomous Vehicle Test Operator at <strong><a href="https://www.outrider.ai/">Outrider</a></strong>
           that helps test, operate, maintain, and evaluate the Outrider System. This is a first-of-its-kind product
@@ -39,7 +39,7 @@
   <hr />
 
 
-  <h3>About</h3>
+  <h3 class="fontstyle">About</h3>
   <p>
     I am a results-oriented individual who performs best when I am working within a team environment. I enjoy being part of a team that is working toward meaningful goals that benefit both the
     company and the world we live in. I try to involve myself with associates who focus on what can be done, and desire to work together to achieve positive change. I hope to use my Transportation
@@ -52,7 +52,7 @@
   <hr />
 
 
-  <h3>Education</h3>
+  <h3 class="fontstyle">Education</h3>
   <ul>
     <li><strong><em><a href="https://www.udemy.com/">Udemy:</a></strong></em></li>
     <ul>
@@ -68,7 +68,7 @@
   <hr />
 
 
-  <h3>Work Experience</h3>
+  <h3 class="fontstyle">Work Experience</h3>
   <table cellspacing="10">
     <thead>
       <tr>
@@ -104,7 +104,7 @@
   <hr />
 
 
-  <h3>Skill Sets</h3>
+  <h3 class="fontstyle">Skill Sets</h3>
   <table cellspacing="10">
     <tr>
       <td>Supply Management</td>
@@ -133,11 +133,11 @@
 
 
   <a href="Hobbies.html">
-    <h3>My Hobbies</h3>
+    <h3 class="fontstyle">My Hobbies</h3>
   </a>
   <hr />
   <a href="Contactme.html">
-    <h3>Contact Me</h3>
+    <h3 class="fontstyle">Contact Me</h3>
   </a>
   <hr />
 
