--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           working across the 48 states with over 250K safe driving miles.
         </p>
         <p>
-          In 2022, and working at Outrider, I decided to improve my education and completed a basic Linux course. I am currently training in Linux Administration, have entered a Web Development bootcamp to learn to code
+          In 2022, and working at Outrider, I decided to improve my education and completed a basic Linux course. I am currently training in Linux Administration, have entered a Web Development bootcamp to learn to code,
           and become a full stack web developer (HTML, CSS, Bootstrap, Javascript, JQuery, Github, Node, React, MongoDB, Web3,
           Blockchain, NFT minting, buying, selling and DAapps). Future classes in 2022 will include Bash shell scripting and python programming,
           as well as IOS App development.
