--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>
           I have also held a number of different management, individual contributer, and operations positions in high technology
           including Global Supply Chain Director, Principle Supply Manager, and Quality Engineer supporting manufacturing, automation development,
-          test development, information technology, marketing, facilities, and construction. I was laid off in 2017 and began training as an over the road truck driver,
+          test development, information technology, marketing, facilities, and construction. I was laid off in 2017, and began training as an over the road truck driver,
           working across the 48 states with over 250K safe driving miles.
         </p>
         <p>
